--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,21 @@
         cadetBlue 26px,
         cadetBlue 52px
     );
+    position:relative;
 }
 
 #thereminPic {
     display:block;
     width: 900px;
+}
+
+#onButton {
+    left:50.5%;
+    width:2.2%;
+    background: black;
+    opacity: 0.7;
+    height: 3%;
+    position:absolute;
+    bottom:5.1%;
+    
 }
