--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,15 @@
 #theremincontrol {
     width: 900px;
     height:600px;
-    background: repeating-linear-gradient(
-        to right,
-        aqua,
-        aqua 4%,
-        cadetBlue 4%,
-        cadetBlue 8%
-    );
-    position:relative;
+    position:absolute;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  cursor:default
 }
 
 #thereminPic {
@@ -18,14 +19,59 @@
 }
 
 #onButton {
-    left:50.5%;
-    width:2.2%;
-    background: black;
-    opacity: 0.7;
-    height: 3%;
+    left:50.35%;
+    height: 3.4%;
     position:absolute;
-    bottom:5.1%;
-    
+    bottom:4.6%;
+    transition-duration: 0.1s;
+}
+
+.key {
+  border: 1px solid black;
+  flex: 1;
+  z-index: -1;
+  box-sizing: content-box; 
+  opacity: 0.8;
+}
+
+#lightPower {
+    transition-duration: 3s;
+    transform: scale(0);
+    left:87.15%;
+    height: 3.6%;
+    position:absolute;
+    bottom:4.8%;
+}
+
+.waveLights {
+    transition-duration: 0.3s;
+    height: 10%;
+    position:absolute;
+    bottom:0.08%;    
+    transform: scale(0);
+}
+
+#rootKnob {
+    transition-duration: 0.15s;
+    left:58.28%;
+    height: 2.9%;
+    position:absolute;
+    bottom:4.8%;
+}
+
+#rangeKnob {
+    transition-duration: 0.15s;
+    left:65.1%;
+    height: 2.9%;
+    position:absolute;
+    bottom:4.8%;
+}
+
+.waveButton {
+  width: 1%;
+  height: 1.3%;
+  position: absolute;
+  bottom: 5.8%;
 }
 
 body {
